# Infomaniak-Newsletter-Interface

./: .gitignore  README.md  package-lock.json  package.json  updater.json
src/: index.html  mailinglists.html  quill.css  quill_logic.js  rust_logic.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mailinglists.json
src-tauri/src/: infomaniak.rs  lib.rs  main.rs  storage.rs  webdav.rs
src/js/: mailinglists.js  main.js  quill_logic.js  rust_logic.js
src/lib/: quill-resize-module.js  quill-table2.js
